// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HomePage Rendering should render home page with tabs 1`] = `
<div>
  <div
    class="css-dev-only-do-not-override-12q6fii ant-app css-var-_r_0_"
  >
    <div
      class="ant-layout css-dev-only-do-not-override-12q6fii css-var-_r_0_"
      style="min-height: 100vh;"
    >
      <div
        class="ant-layout css-dev-only-do-not-override-12q6fii css-var-_r_0_"
      >
        <header
          class="ant-layout-header header css-dev-only-do-not-override-12q6fii css-var-_r_0_"
        >
          <div
            class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_0_ ant-flex-align-center"
            style="gap: 10px;"
          >
            <div
              class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_0_ ant-flex-align-center"
              style="gap: 10px;"
            >
              <img
                alt="Document Atom"
                data-nimg="1"
                decoding="async"
                height="35"
                loading="lazy"
                src="/_next/image?url=%2Fassets%2Flogo.png&w=96&q=75"
                srcset="/_next/image?url=%2Fassets%2Flogo.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Flogo.png&w=96&q=75 2x"
                style="color: transparent;"
                width="35"
              />
              <span
                class="ant-typography css-dev-only-do-not-override-12q6fii css-var-_r_0_"
                style="font-size: 16px;"
              >
                DocumnetAtom
              </span>
            </div>
          </div>
          <span
            class="serverUrl"
          >
            http://localhost:3000
          </span>
          <div
            class="headerActions ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_0_ ant-flex-align-center"
            style="gap: 10px;"
          >
            <a
              aria-disabled="false"
              aria-label="View on GitHub"
              class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_0_ ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              href="https://github.com/documentatom/documentatom"
              rel="noopener noreferrer"
              tabindex="0"
              target="_blank"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="github"
                  class="anticon anticon-github"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="github"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                    />
                  </svg>
                </span>
              </span>
            </a>
            <button
              aria-label="Switch to dark mode"
              aria-pressed="false"
              style="position: relative; width: 20px; height: 20px; padding: 0px; background: transparent; cursor: pointer; color: currentcolor; line-height: 0;"
              type="button"
            >
              <span
                style="position: absolute; inset: 0; display: inline-flex; transition: opacity 0.3s ease, transform 0.3s ease; opacity: 1; transform: rotate(0deg) scale(1);"
              >
                <svg
                  fill="none"
                  height="20"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="5"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="1"
                    y2="3"
                  />
                  <line
                    x1="12"
                    x2="12"
                    y1="21"
                    y2="23"
                  />
                  <line
                    x1="4.22"
                    x2="5.64"
                    y1="4.22"
                    y2="5.64"
                  />
                  <line
                    x1="18.36"
                    x2="19.78"
                    y1="18.36"
                    y2="19.78"
                  />
                  <line
                    x1="1"
                    x2="3"
                    y1="12"
                    y2="12"
                  />
                  <line
                    x1="21"
                    x2="23"
                    y1="12"
                    y2="12"
                  />
                  <line
                    x1="4.22"
                    x2="5.64"
                    y1="19.78"
                    y2="18.36"
                  />
                  <line
                    x1="18.36"
                    x2="19.78"
                    y1="5.64"
                    y2="4.22"
                  />
                </svg>
              </span>
              <span
                style="position: absolute; inset: 0; display: inline-flex; transition: opacity 0.3s ease, transform 0.3s ease; opacity: 0; transform: rotate(90deg) scale(0.6);"
              >
                <svg
                  fill="none"
                  height="20"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <path
                    d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
                  />
                </svg>
              </span>
            </button>
            <a
              aria-label="Log out"
              href="/"
            >
              <button
                aria-label="Log out"
                class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_0_ ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="logout"
                    class="anticon anticon-logout"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="logout"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M868 732h-70.3c-4.8 0-9.3 2.1-12.3 5.8-7 8.5-14.5 16.7-22.4 24.5a353.84 353.84 0 01-112.7 75.9A352.8 352.8 0 01512.4 866c-47.9 0-94.3-9.4-137.9-27.8a353.84 353.84 0 01-112.7-75.9 353.28 353.28 0 01-76-112.5C167.3 606.2 158 559.9 158 512s9.4-94.2 27.8-137.8c17.8-42.1 43.4-80 76-112.5s70.5-58.1 112.7-75.9c43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 7.9 7.9 15.3 16.1 22.4 24.5 3 3.7 7.6 5.8 12.3 5.8H868c6.3 0 10.2-7 6.7-12.3C798 160.5 663.8 81.6 511.3 82 271.7 82.6 79.6 277.1 82 516.4 84.4 751.9 276.2 942 512.4 942c152.1 0 285.7-78.8 362.3-197.7 3.4-5.3-.4-12.3-6.7-12.3zm88.9-226.3L815 393.7c-5.3-4.2-13-.4-13 6.3v76H488c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h314v76c0 6.7 7.8 10.5 13 6.3l141.9-112a8 8 0 000-12.6z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </a>
          </div>
        </header>
        <main
          class="ant-layout-content css-dev-only-do-not-override-12q6fii css-var-_r_0_"
          style="min-height: 280px; background: rgb(255, 255, 255);"
        >
          <main
            class="ant-layout-content pageContainer css-dev-only-do-not-override-12q6fii css-var-_r_0_"
            style="height: auto;"
          >
            <div
              class="pageTitleContainer pageTitleContainer ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_0_ ant-flex-wrap-wrap ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
            >
              <div
                class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_0_ ant-flex-align-center ant-flex-gap-small"
              >
                <span
                  class="ant-typography css-dev-only-do-not-override-12q6fii css-var-_r_0_"
                  data-testid="heading"
                  style="font-weight: 600; font-size: 16px;"
                >
                  <div
                    class="ant-tabs ant-tabs-top tabsContainer css-dev-only-do-not-override-12q6fii css-var-_r_0_ ant-tabs-css-var"
                  >
                    <div
                      aria-orientation="horizontal"
                      class="ant-tabs-nav"
                      role="tablist"
                    >
                      <div
                        class="ant-tabs-nav-wrap"
                      >
                        <div
                          class="ant-tabs-nav-list"
                          style="transform: translate(0px, 0px);"
                        >
                          <div
                            class="ant-tabs-tab ant-tabs-tab-active"
                            data-node-key="type-detection"
                          >
                            <div
                              aria-controls="rc-tabs-test-panel-type-detection"
                              aria-selected="true"
                              class="ant-tabs-tab-btn"
                              id="rc-tabs-test-tab-type-detection"
                              role="tab"
                              tabindex="0"
                            >
                              Type Detection
                            </div>
                          </div>
                          <div
                            class="ant-tabs-tab"
                            data-node-key="atom-extraction"
                          >
                            <div
                              aria-controls="rc-tabs-test-panel-atom-extraction"
                              aria-selected="false"
                              class="ant-tabs-tab-btn"
                              id="rc-tabs-test-tab-atom-extraction"
                              role="tab"
                              tabindex="-1"
                            >
                              Atom Extraction
                            </div>
                          </div>
                          <div
                            class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
                      >
                        <button
                          aria-controls="rc-tabs-test-more-popup"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          class="ant-tabs-nav-more"
                          id="rc-tabs-test-more"
                          style="visibility: hidden; order: 1;"
                          type="button"
                        >
                          <span
                            aria-label="ellipsis"
                            class="anticon anticon-ellipsis"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="ellipsis"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                              />
                            </svg>
                          </span>
                        </button>
                      </div>
                    </div>
                    <div
                      class="ant-tabs-body-holder"
                    >
                      <div
                        class="ant-tabs-body ant-tabs-body-top"
                      >
                        <div
                          aria-hidden="false"
                          aria-labelledby="rc-tabs-test-tab-type-detection"
                          class="ant-tabs-content ant-tabs-content-active"
                          id="rc-tabs-test-panel-type-detection"
                          role="tabpanel"
                          tabindex="-1"
                        />
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="pageContent pageContent"
            >
              <div
                class="workflow"
              >
                <div
                  class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_0_ ant-flex-align-center"
                  style="gap: 20px;"
                >
                  <span
                    class="ant-upload-wrapper uploadContainer css-dev-only-do-not-override-12q6fii css-var-_r_0_"
                  >
                    <div
                      class="ant-upload ant-upload-select"
                    >
                      <span
                        class="ant-upload"
                      >
                        <input
                          accept=""
                          name="file"
                          style="display: none;"
                          type="file"
                        />
                        <button
                          class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_0_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              aria-label="upload"
                              class="anticon anticon-upload"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="upload"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                                />
                              </svg>
                            </span>
                          </span>
                          <span>
                            Select File
                          </span>
                        </button>
                      </span>
                    </div>
                    <div
                      class="ant-upload-list ant-upload-list-text"
                    />
                  </span>
                  <button
                    class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_0_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                    disabled=""
                    type="button"
                  >
                    <span>
                      Submit
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </main>
        </main>
      </div>
    </div>
  </div>
</div>
`;

exports[`HomePage Snapshots should match snapshot for Atom Extraction tab 1`] = `
<div
  class="css-dev-only-do-not-override-12q6fii ant-app css-var-_r_1m_"
>
  <div
    class="ant-layout css-dev-only-do-not-override-12q6fii css-var-_r_1m_"
    style="min-height: 100vh;"
  >
    <div
      class="ant-layout css-dev-only-do-not-override-12q6fii css-var-_r_1m_"
    >
      <header
        class="ant-layout-header header css-dev-only-do-not-override-12q6fii css-var-_r_1m_"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-flex-align-center"
          style="gap: 10px;"
        >
          <div
            class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-flex-align-center"
            style="gap: 10px;"
          >
            <img
              alt="Document Atom"
              data-nimg="1"
              decoding="async"
              height="35"
              loading="lazy"
              src="/_next/image?url=%2Fassets%2Flogo.png&w=96&q=75"
              srcset="/_next/image?url=%2Fassets%2Flogo.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Flogo.png&w=96&q=75 2x"
              style="color: transparent;"
              width="35"
            />
            <span
              class="ant-typography css-dev-only-do-not-override-12q6fii css-var-_r_1m_"
              style="font-size: 16px;"
            >
              DocumnetAtom
            </span>
          </div>
        </div>
        <span
          class="serverUrl"
        >
          http://localhost:3000
        </span>
        <div
          class="headerActions ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-flex-align-center"
          style="gap: 10px;"
        >
          <a
            aria-disabled="false"
            aria-label="View on GitHub"
            class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
            href="https://github.com/documentatom/documentatom"
            rel="noopener noreferrer"
            tabindex="0"
            target="_blank"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="github"
                class="anticon anticon-github"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="github"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                  />
                </svg>
              </span>
            </span>
          </a>
          <button
            aria-label="Switch to dark mode"
            aria-pressed="false"
            style="position: relative; width: 20px; height: 20px; padding: 0px; background: transparent; cursor: pointer; color: currentcolor; line-height: 0;"
            type="button"
          >
            <span
              style="position: absolute; inset: 0; display: inline-flex; transition: opacity 0.3s ease, transform 0.3s ease; opacity: 1; transform: rotate(0deg) scale(1);"
            >
              <svg
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="5"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="1"
                  y2="3"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="21"
                  y2="23"
                />
                <line
                  x1="4.22"
                  x2="5.64"
                  y1="4.22"
                  y2="5.64"
                />
                <line
                  x1="18.36"
                  x2="19.78"
                  y1="18.36"
                  y2="19.78"
                />
                <line
                  x1="1"
                  x2="3"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="21"
                  x2="23"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="4.22"
                  x2="5.64"
                  y1="19.78"
                  y2="18.36"
                />
                <line
                  x1="18.36"
                  x2="19.78"
                  y1="5.64"
                  y2="4.22"
                />
              </svg>
            </span>
            <span
              style="position: absolute; inset: 0; display: inline-flex; transition: opacity 0.3s ease, transform 0.3s ease; opacity: 0; transform: rotate(90deg) scale(0.6);"
            >
              <svg
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
                />
              </svg>
            </span>
          </button>
          <a
            aria-label="Log out"
            href="/"
          >
            <button
              aria-label="Log out"
              class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="logout"
                  class="anticon anticon-logout"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="logout"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M868 732h-70.3c-4.8 0-9.3 2.1-12.3 5.8-7 8.5-14.5 16.7-22.4 24.5a353.84 353.84 0 01-112.7 75.9A352.8 352.8 0 01512.4 866c-47.9 0-94.3-9.4-137.9-27.8a353.84 353.84 0 01-112.7-75.9 353.28 353.28 0 01-76-112.5C167.3 606.2 158 559.9 158 512s9.4-94.2 27.8-137.8c17.8-42.1 43.4-80 76-112.5s70.5-58.1 112.7-75.9c43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 7.9 7.9 15.3 16.1 22.4 24.5 3 3.7 7.6 5.8 12.3 5.8H868c6.3 0 10.2-7 6.7-12.3C798 160.5 663.8 81.6 511.3 82 271.7 82.6 79.6 277.1 82 516.4 84.4 751.9 276.2 942 512.4 942c152.1 0 285.7-78.8 362.3-197.7 3.4-5.3-.4-12.3-6.7-12.3zm88.9-226.3L815 393.7c-5.3-4.2-13-.4-13 6.3v76H488c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h314v76c0 6.7 7.8 10.5 13 6.3l141.9-112a8 8 0 000-12.6z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </a>
        </div>
      </header>
      <main
        class="ant-layout-content css-dev-only-do-not-override-12q6fii css-var-_r_1m_"
        style="min-height: 280px; background: rgb(255, 255, 255);"
      >
        <main
          class="ant-layout-content pageContainer css-dev-only-do-not-override-12q6fii css-var-_r_1m_"
          style="height: auto;"
        >
          <div
            class="pageTitleContainer pageTitleContainer ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-flex-wrap-wrap ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
          >
            <div
              class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-flex-align-center ant-flex-gap-small"
            >
              <span
                class="ant-typography css-dev-only-do-not-override-12q6fii css-var-_r_1m_"
                data-testid="heading"
                style="font-weight: 600; font-size: 16px;"
              >
                <div
                  class="ant-tabs ant-tabs-top tabsContainer css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-tabs-css-var"
                >
                  <div
                    aria-orientation="horizontal"
                    class="ant-tabs-nav"
                    role="tablist"
                  >
                    <div
                      class="ant-tabs-nav-wrap"
                    >
                      <div
                        class="ant-tabs-nav-list"
                        style="transform: translate(0px, 0px); transition: none;"
                      >
                        <div
                          class="ant-tabs-tab"
                          data-node-key="type-detection"
                        >
                          <div
                            aria-controls="rc-tabs-test-panel-type-detection"
                            aria-selected="false"
                            class="ant-tabs-tab-btn"
                            id="rc-tabs-test-tab-type-detection"
                            role="tab"
                            tabindex="-1"
                          >
                            Type Detection
                          </div>
                        </div>
                        <div
                          class="ant-tabs-tab ant-tabs-tab-active"
                          data-node-key="atom-extraction"
                        >
                          <div
                            aria-controls="rc-tabs-test-panel-atom-extraction"
                            aria-selected="true"
                            class="ant-tabs-tab-btn"
                            id="rc-tabs-test-tab-atom-extraction"
                            role="tab"
                            tabindex="0"
                          >
                            Atom Extraction
                          </div>
                        </div>
                        <div
                          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                          style="width: 0px; left: 0px; transform: translateX(-50%);"
                        />
                      </div>
                    </div>
                    <div
                      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
                    >
                      <button
                        aria-controls="rc-tabs-test-more-popup"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="ant-tabs-nav-more"
                        id="rc-tabs-test-more"
                        style="visibility: hidden; order: 1;"
                        type="button"
                      >
                        <span
                          aria-label="ellipsis"
                          class="anticon anticon-ellipsis"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="ellipsis"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="ant-tabs-body-holder"
                  >
                    <div
                      class="ant-tabs-body ant-tabs-body-top"
                    >
                      <div
                        aria-hidden="true"
                        aria-labelledby="rc-tabs-test-tab-type-detection"
                        class="ant-tabs-content ant-tabs-content-hidden"
                        id="rc-tabs-test-panel-type-detection"
                        role="tabpanel"
                        tabindex="-1"
                      />
                      <div
                        aria-hidden="false"
                        aria-labelledby="rc-tabs-test-tab-atom-extraction"
                        class="ant-tabs-content ant-tabs-content-active"
                        id="rc-tabs-test-panel-atom-extraction"
                        role="tabpanel"
                        tabindex="-1"
                      />
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="pageContent pageContent"
          >
            <div
              class="workflow"
            >
              <div
                class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-flex-align-center"
                style="gap: 20px;"
              >
                <div
                  class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-flex-align-center"
                  style="gap: 20px;"
                >
                  <label
                    style="display: block; margin-bottom: 8px; white-space: nowrap;"
                  >
                    File Type
                  </label>
                  <div
                    class="ant-select ant-select-outlined css-var-_r_1m_ ant-select-css-var css-dev-only-do-not-override-12q6fii ant-select-single ant-select-show-arrow"
                    style="width: 150px;"
                  >
                    <div
                      class="ant-select-content"
                    >
                      <div
                        class="ant-select-placeholder"
                      >
                        Select file type
                      </div>
                      <input
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        autocomplete="new-password"
                        class="ant-select-input"
                        id="test-id"
                        readonly=""
                        role="combobox"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="ant-select-suffix"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-divider css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-divider-vertical ant-divider-rail"
                  role="separator"
                />
                <span
                  class="ant-upload-wrapper uploadContainer css-dev-only-do-not-override-12q6fii css-var-_r_1m_"
                >
                  <div
                    class="ant-upload ant-upload-select ant-upload-disabled"
                  >
                    <span
                      class="ant-upload ant-upload-disabled"
                    >
                      <input
                        accept="*"
                        disabled=""
                        name="file"
                        style="display: none;"
                        type="file"
                      />
                      <button
                        class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                        disabled=""
                        type="button"
                      >
                        <span
                          class="ant-btn-icon"
                        >
                          <span
                            aria-label="upload"
                            class="anticon anticon-upload"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="upload"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span>
                          Select File
                        </span>
                      </button>
                    </span>
                  </div>
                  <div
                    class="ant-upload-list ant-upload-list-text"
                  />
                </span>
                <div
                  class="ant-divider css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-divider-vertical ant-divider-rail"
                  role="separator"
                />
                <button
                  class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="setting"
                      class="anticon anticon-setting"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="setting"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
                        />
                      </svg>
                    </span>
                  </span>
                  <span>
                    Settings
                  </span>
                </button>
                <button
                  class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_1m_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                  disabled=""
                  type="button"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </main>
      </main>
    </div>
  </div>
</div>
`;

exports[`HomePage Snapshots should match snapshot for Type Detection tab 1`] = `
<div
  class="css-dev-only-do-not-override-12q6fii ant-app css-var-_r_1g_"
>
  <div
    class="ant-layout css-dev-only-do-not-override-12q6fii css-var-_r_1g_"
    style="min-height: 100vh;"
  >
    <div
      class="ant-layout css-dev-only-do-not-override-12q6fii css-var-_r_1g_"
    >
      <header
        class="ant-layout-header header css-dev-only-do-not-override-12q6fii css-var-_r_1g_"
      >
        <div
          class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1g_ ant-flex-align-center"
          style="gap: 10px;"
        >
          <div
            class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1g_ ant-flex-align-center"
            style="gap: 10px;"
          >
            <img
              alt="Document Atom"
              data-nimg="1"
              decoding="async"
              height="35"
              loading="lazy"
              src="/_next/image?url=%2Fassets%2Flogo.png&w=96&q=75"
              srcset="/_next/image?url=%2Fassets%2Flogo.png&w=48&q=75 1x, /_next/image?url=%2Fassets%2Flogo.png&w=96&q=75 2x"
              style="color: transparent;"
              width="35"
            />
            <span
              class="ant-typography css-dev-only-do-not-override-12q6fii css-var-_r_1g_"
              style="font-size: 16px;"
            >
              DocumnetAtom
            </span>
          </div>
        </div>
        <span
          class="serverUrl"
        >
          http://localhost:3000
        </span>
        <div
          class="headerActions ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1g_ ant-flex-align-center"
          style="gap: 10px;"
        >
          <a
            aria-disabled="false"
            aria-label="View on GitHub"
            class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_1g_ ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
            href="https://github.com/documentatom/documentatom"
            rel="noopener noreferrer"
            tabindex="0"
            target="_blank"
          >
            <span
              class="ant-btn-icon"
            >
              <span
                aria-label="github"
                class="anticon anticon-github"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="github"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                  />
                </svg>
              </span>
            </span>
          </a>
          <button
            aria-label="Switch to dark mode"
            aria-pressed="false"
            style="position: relative; width: 20px; height: 20px; padding: 0px; background: transparent; cursor: pointer; color: currentcolor; line-height: 0;"
            type="button"
          >
            <span
              style="position: absolute; inset: 0; display: inline-flex; transition: opacity 0.3s ease, transform 0.3s ease; opacity: 1; transform: rotate(0deg) scale(1);"
            >
              <svg
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="5"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="1"
                  y2="3"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="21"
                  y2="23"
                />
                <line
                  x1="4.22"
                  x2="5.64"
                  y1="4.22"
                  y2="5.64"
                />
                <line
                  x1="18.36"
                  x2="19.78"
                  y1="18.36"
                  y2="19.78"
                />
                <line
                  x1="1"
                  x2="3"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="21"
                  x2="23"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="4.22"
                  x2="5.64"
                  y1="19.78"
                  y2="18.36"
                />
                <line
                  x1="18.36"
                  x2="19.78"
                  y1="5.64"
                  y2="4.22"
                />
              </svg>
            </span>
            <span
              style="position: absolute; inset: 0; display: inline-flex; transition: opacity 0.3s ease, transform 0.3s ease; opacity: 0; transform: rotate(90deg) scale(0.6);"
            >
              <svg
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
                />
              </svg>
            </span>
          </button>
          <a
            aria-label="Log out"
            href="/"
          >
            <button
              aria-label="Log out"
              class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_1g_ ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="logout"
                  class="anticon anticon-logout"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="logout"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M868 732h-70.3c-4.8 0-9.3 2.1-12.3 5.8-7 8.5-14.5 16.7-22.4 24.5a353.84 353.84 0 01-112.7 75.9A352.8 352.8 0 01512.4 866c-47.9 0-94.3-9.4-137.9-27.8a353.84 353.84 0 01-112.7-75.9 353.28 353.28 0 01-76-112.5C167.3 606.2 158 559.9 158 512s9.4-94.2 27.8-137.8c17.8-42.1 43.4-80 76-112.5s70.5-58.1 112.7-75.9c43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 7.9 7.9 15.3 16.1 22.4 24.5 3 3.7 7.6 5.8 12.3 5.8H868c6.3 0 10.2-7 6.7-12.3C798 160.5 663.8 81.6 511.3 82 271.7 82.6 79.6 277.1 82 516.4 84.4 751.9 276.2 942 512.4 942c152.1 0 285.7-78.8 362.3-197.7 3.4-5.3-.4-12.3-6.7-12.3zm88.9-226.3L815 393.7c-5.3-4.2-13-.4-13 6.3v76H488c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h314v76c0 6.7 7.8 10.5 13 6.3l141.9-112a8 8 0 000-12.6z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </a>
        </div>
      </header>
      <main
        class="ant-layout-content css-dev-only-do-not-override-12q6fii css-var-_r_1g_"
        style="min-height: 280px; background: rgb(255, 255, 255);"
      >
        <main
          class="ant-layout-content pageContainer css-dev-only-do-not-override-12q6fii css-var-_r_1g_"
          style="height: auto;"
        >
          <div
            class="pageTitleContainer pageTitleContainer ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1g_ ant-flex-wrap-wrap ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
          >
            <div
              class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1g_ ant-flex-align-center ant-flex-gap-small"
            >
              <span
                class="ant-typography css-dev-only-do-not-override-12q6fii css-var-_r_1g_"
                data-testid="heading"
                style="font-weight: 600; font-size: 16px;"
              >
                <div
                  class="ant-tabs ant-tabs-top tabsContainer css-dev-only-do-not-override-12q6fii css-var-_r_1g_ ant-tabs-css-var"
                >
                  <div
                    aria-orientation="horizontal"
                    class="ant-tabs-nav"
                    role="tablist"
                  >
                    <div
                      class="ant-tabs-nav-wrap"
                    >
                      <div
                        class="ant-tabs-nav-list"
                        style="transform: translate(0px, 0px);"
                      >
                        <div
                          class="ant-tabs-tab ant-tabs-tab-active"
                          data-node-key="type-detection"
                        >
                          <div
                            aria-controls="rc-tabs-test-panel-type-detection"
                            aria-selected="true"
                            class="ant-tabs-tab-btn"
                            id="rc-tabs-test-tab-type-detection"
                            role="tab"
                            tabindex="0"
                          >
                            Type Detection
                          </div>
                        </div>
                        <div
                          class="ant-tabs-tab"
                          data-node-key="atom-extraction"
                        >
                          <div
                            aria-controls="rc-tabs-test-panel-atom-extraction"
                            aria-selected="false"
                            class="ant-tabs-tab-btn"
                            id="rc-tabs-test-tab-atom-extraction"
                            role="tab"
                            tabindex="-1"
                          >
                            Atom Extraction
                          </div>
                        </div>
                        <div
                          class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
                        />
                      </div>
                    </div>
                    <div
                      class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
                    >
                      <button
                        aria-controls="rc-tabs-test-more-popup"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="ant-tabs-nav-more"
                        id="rc-tabs-test-more"
                        style="visibility: hidden; order: 1;"
                        type="button"
                      >
                        <span
                          aria-label="ellipsis"
                          class="anticon anticon-ellipsis"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="ellipsis"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="ant-tabs-body-holder"
                  >
                    <div
                      class="ant-tabs-body ant-tabs-body-top"
                    >
                      <div
                        aria-hidden="false"
                        aria-labelledby="rc-tabs-test-tab-type-detection"
                        class="ant-tabs-content ant-tabs-content-active"
                        id="rc-tabs-test-panel-type-detection"
                        role="tabpanel"
                        tabindex="-1"
                      />
                    </div>
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="pageContent pageContent"
          >
            <div
              class="workflow"
            >
              <div
                class="ant-flex css-dev-only-do-not-override-12q6fii css-var-_r_1g_ ant-flex-align-center"
                style="gap: 20px;"
              >
                <span
                  class="ant-upload-wrapper uploadContainer css-dev-only-do-not-override-12q6fii css-var-_r_1g_"
                >
                  <div
                    class="ant-upload ant-upload-select"
                  >
                    <span
                      class="ant-upload"
                    >
                      <input
                        accept=""
                        name="file"
                        style="display: none;"
                        type="file"
                      />
                      <button
                        class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_1g_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                        type="button"
                      >
                        <span
                          class="ant-btn-icon"
                        >
                          <span
                            aria-label="upload"
                            class="anticon anticon-upload"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="upload"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span>
                          Select File
                        </span>
                      </button>
                    </span>
                  </div>
                  <div
                    class="ant-upload-list ant-upload-list-text"
                  />
                </span>
                <button
                  class="ant-btn css-dev-only-do-not-override-12q6fii css-var-_r_1g_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                  disabled=""
                  type="button"
                >
                  <span>
                    Submit
                  </span>
                </button>
              </div>
            </div>
          </div>
        </main>
      </main>
    </div>
  </div>
</div>
`;
